mob web dev optimise
thumbnail size mobwebdev for index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </li>
 
           <li>
-            <img src="img/mobilewebdev.jpg">
+            <img src="img/mobilewebdev.min.jpg">
             <a href="project-mobile.html">Mobile Web Development</a>
             <p>Making mobile apps isn't so hard after all.</p>
           </li>
@@ -63,6 +63,6 @@
     </script>
     <script async src="http://www.google-analytics.com/analytics.js"></script>
     <script async src="js/perfmatters.js"></script>
-    
+
   </body>
 </html>
