test embed permattersjs

--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
       ga('send', 'pageview');
     </script>
     <script async src="http://www.google-analytics.com/analytics.js"></script>
-    <script async src="js/perfmatters.js"></script>
+    <!-- <script async src="js/perfmatters.js"></script> -->
+    <script>
+    window.addEventListener("load",function(){var a=window.performance.timing;document.getElementById("crp-stats").textContent="DCL: "+(a.domContentLoadedEventStart-a.domLoading)+"ms, onload: "+(a.domComplete-a.domLoading)+"ms"});
+    </script>
 
   </body>
 </html>
