--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </li>
 
           <li>
-            <img src="img/mobilewebdev.min.jpg">
+            <img src="img/mobilewebdev.min.gif">
             <a href="project-mobile.html">Mobile Web Development</a>
             <p>Making mobile apps isn't so hard after all.</p>
           </li>
